[package]
name = "rust_pong"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bracket-lib = "0.8.1"
bracket-geometry = "0.8.3"
getrandom = { version = "0.2", features = ["js"] }
instant = { version = "0.1", features = [ "stdweb" ] }